--- a/public/facegrid/styles/site.css
+++ b/public/facegrid/styles/site.css
@@ -58,24 +58,24 @@ body {
   width: 100%;
   height: 100px;
 }
-#home .grid-container {
-  background: rgba(0, 0, 0, 0.1);
+#home .grid-wrapper {
+  height: 106px;
+  position: fixed;
   bottom: 0px;
   left: 0px;
-  max-height: 300px;
+  width: 100%;
+}
+#home .grid-container {
+  background: rgba(0, 0, 0, 0.1);
+  height: 136px;
   margin-top: 0px;
   -webkit-overflow-scrolling: touch;
-  overflow: -moz-scrollbars-none;
-  overflow-x: hidden;
+  overflow-x: scroll;
   overflow-y: hidden;
-  -ms-overflow-style: none;
-  padding-bottom: 10px;
-  position: fixed;
+  padding-bottom: 40px;
+  position: absolute;
   width: 100%;
   z-index: 30;
-}
-#home .grid-container::-webkit-scrollbar {
-  display: none;
 }
 #home .grid-container .free-wall {
   float: left;
